force-app/main/default/objects/Placement_attribute_schedule__c/Placement_attribute_schedule__c.object-meta.xml
<CustomObject>
    <label>Contract extension</label>
    <nameField>
        <label>Placement  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract extensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>