force-app/main/default/objects/Placement_attribute_schedule__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <formula>Placement__r.Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Function</label>
    <type>Text</type>
</CustomField>