force-app/main/default/objects/Placement_attribute_schedule__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipName>Placement_attributes_scedules</relationshipName>
    <type>Lookup</type>
</CustomField>