force-app/main/default/objects/Placement_attribute_schedule__c/fields/Professional__c.field-meta.xml
<CustomField>
    <fullName>Professional__c</fullName>
    <formula>Placement__r.Professional__c</formula>
    <label>Professional</label>
    <type>Text</type>
</CustomField>